@@ -31,7 +31,7 @@ Supported character encodings:
 
 Version 6.9.6
 -------------
-* In a Unix environment, if you have the POSIX API enabled in an earlier version (disabled by default in 6.9.5) and you need application binary compatibility with the POSIX API, specify "--enable-binary-compatible-posix-api=yes" instead of "--enable-posix-api=yes". Starting in 6.9.6, "--enable-posix-api=yes" only supports source-level compatibility for 6.9.5 and earlier about POSIX API.
+* When using configure script, if you have the POSIX API enabled in an earlier version (disabled by default in 6.9.5) and you need application binary compatibility with the POSIX API, specify "--enable-binary-compatible-posix-api=yes" instead of "--enable-posix-api=yes". Starting in 6.9.6, "--enable-posix-api=yes" only supports source-level compatibility for 6.9.5 and earlier about POSIX API. (Issue #210)
 
 * NEW: configure option --enable-binary-compatible-posix-api=[yes/no]
 * NEW API: Limiting the maximum number of calls of subexp-call
@@ -39,7 +39,8 @@ Version 6.9.6
 * Fixed behavior of ONIG_OPTION_NOTBOL / NOTEOL
 * Fixed many problems found by OSS-Fuzz
 * Fixed many problems found by Coverity
-* Fixed CVE-2020-26159
+* Fixed CVE-2020-26159 (This turned out not to be a problem later. #221)
+* Under cygwin and mingw, generate and install the libonig.def file (Issue #220)
 
 
 Version 6.9.5 revised 1
