@@ -6238,12 +6238,14 @@ concat_opt_exact(OptStr* to, OptStr* add, OnigEncoding enc)
   end = p + add->len;
   for (i = to->len; p < end; ) {
     len = enclen(enc, p);
-    if (i + len >= OPT_EXACT_MAXLEN) {
+    if (i + len > OPT_EXACT_MAXLEN) {
       r = 1; /* 1:full */
       break;
     }
-    for (j = 0; j < len && p < end; j++)
+    for (j = 0; j < len && p < end; j++) {
+      /* coverity[overrun-local] */
       to->s[i++] = *p++;
+  }
   }
 
   to->len = i;
@@ -6264,9 +6266,11 @@ concat_opt_exact_str(OptStr* to, UChar* s, UChar* end, OnigEncoding enc)
 
   for (i = to->len, p = s; p < end && i < OPT_EXACT_MAXLEN; ) {
     len = enclen(enc, p);
-    if (i + len >= OPT_EXACT_MAXLEN) break;
-    for (j = 0; j < len && p < end; j++)
+    if (i + len > OPT_EXACT_MAXLEN) break;
+    for (j = 0; j < len && p < end; j++) {
+      /* coverity[overrun-local] */
       to->s[i++] = *p++;
+    }
   }
 
   to->len = i;
